# warehouse

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
data/archive/: messy_test.csv
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml
dbt_project/macros/: map_ids.sql
dbt_project/models/staging/: src_stats19.yml  staging.yml  stg_casualties.sql  stg_collisions.sql  stg_vehicles.sql
dbt_project/seeds/dft_data_guide/: seed_data_guide.csv
dbt_project/seeds/dft_mappings/: seed_age_of_casualty.csv  seed_age_of_driver.csv  seed_bus_or_coach_passenger.csv  seed_casualty_class.csv  seed_casualty_distance_banding.csv  seed_casualty_type.csv  seed_collision_injury_based.csv  seed_collision_severity.csv  seed_day_of_week.csv  seed_did_police_officer_attend_scene_of_collision.csv  seed_driver_imd_decile.csv  seed_journey_purpose_of_driver.csv  seed_junction_control.csv  seed_light_conditions.csv  seed_local_authority_district.csv  seed_local_authority_highway_current.csv  seed_pedestrian_crossing.csv  seed_pedestrian_movement.csv  seed_police_force.csv  (+13 more)
dbt_project/tests/: assert_fatalities_less_than_casualties.sql  assert_positive_number_of_vehicles.sql  assert_valid_coordinates.sql
diagrams/: constellation.d2  constellation.dbdiagram  constellation.dbml  overview.d2
pipeline/dbt_project/: dbt_project.yml  package-lock.yml  profiles.yml
pipeline/scripts/: generate_yaml_from_data_guide.py  generated_schema.yml
scripts/mappings_generation/: generate_mappings_from_data_guide.py
scripts/schema_generation/: generated_schema.yml
(+87 files in other folders)
