[project]
name = "duck-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.3",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
]
